[package]
name = "web-sys_canvas_hello_world"
version = "0.1.0"
authors = ["Jeroen"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.32"
wasm-bindgen = "0.2.55"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.32"
features = [
	'CanvasRenderingContext2d',
	'Document',
	'Element',
	'HtmlCanvasElement',
	'Window',
	'console'
]

